cless/test-data/error/wrong_integer_suffix.c
int main(void) {
    return 42WrongSuffix;
}
